<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HelperHand</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="email">Email_Id</string>
    <string name="password">PassWord</string>
    <string name="phone">PhoneNumber</string>
    <string name="name">Name</string>
    <string name="signup">SignUp</string>
    <string name="hvact">Already Have Account </string>
    <string name="newacc">Create Account</string>
</resources>
